# RPi-MFRCScan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.toml  main.cpp
